Updates for new hosting

--- a/classic/assets/html/footer.html
+++ b/classic/assets/html/footer.html
@@ -8,4 +8,4 @@
 <lead>Licensed according to Apache 2.0. See <a href="https://github.com/jddamore/IPSviewer">current code
     repository</a> for details</lead>
 <br />
-<lead>Hosted by <a href="https://www.moreinformatics.com">More Informatics, Inc.</a></lead>
+<lead>Hosted by <a href="https://betterpie.org">Progress for Informatics and Energy Foundation, Inc.</a></lead>
